# gxna

./: Args.cpp  Args.h  CMakeLists.txt  CPPLINT.cfg  Distribution.cpp  Distribution.h  Exception.h  Experiment.cpp  Experiment.h  GeneNetwork.cpp  GeneNetwork.h  Makefile  MultipleTest.h  README.md  RandomPermutation.cpp  RandomPermutation.h  Statistics.cpp  Statistics.h  VectorUtil.h  gxna.cpp  makefile  makefile.unix
cpp/: Args.cpp  Distribution.cpp  Experiment.cpp  GeneNetwork.cpp  RandomPermutation.cpp  Statistics.cpp  gxna.cpp
expdata/: test.phe
include/: Args.h  Distribution.h  Exception.h  Experiment.h  GeneNetwork.h  Log.h  MultipleTest.h  RandomPermutation.h  Statistics.h  VectorUtil.h
refdata/: hgu133a.ann  hgu133b.ann  hgu95av2.ann
test/: regression_test.sh  test_distribution.cpp  test_permutation.cpp  test_statistics.cpp
test/data/100/: frame1.html  graph_0.dot  graph_0.txt  graph_1.dot  graph_1.txt  graph_2.dot  graph_2.txt  graph_3.dot  graph_3.txt  graph_4.dot  graph_4.txt  graph_5.dot  graph_5.txt  graph_6.dot  graph_6.txt  graph_7.dot  graph_7.txt  graph_8.dot  graph_8.txt  graph_9.dot  graph_9.txt  index.html  out.txt  parameters.txt  results.txt
test/data/101/: frame1.html  graph_0.dot  graph_0.txt  graph_1.dot  graph_1.txt  graph_2.dot  graph_2.txt  graph_3.dot  graph_3.txt  graph_4.dot  graph_4.txt  graph_5.dot  graph_5.txt  graph_6.dot  graph_6.txt  graph_7.dot  graph_7.txt  graph_8.dot  graph_8.txt  graph_9.dot  graph_9.txt  index.html  out.txt  parameters.txt  results.txt
test/data/102/: frame1.html  graph_0.dot  graph_0.txt  graph_1.dot  graph_1.txt  graph_2.dot  graph_2.txt  graph_3.dot  graph_3.txt  graph_4.dot  graph_4.txt  graph_5.dot  graph_5.txt  graph_6.dot  graph_6.txt  graph_7.dot  graph_7.txt  graph_8.dot  graph_8.txt  graph_9.dot  graph_9.txt  index.html  out.txt  parameters.txt  results.txt
test/data/103/: frame1.html  graph_0.dot  graph_0.txt  graph_1.dot  graph_1.txt  graph_2.dot  graph_2.txt  graph_3.dot  graph_3.txt  graph_4.dot  graph_4.txt  graph_5.dot  graph_5.txt  graph_6.dot  graph_6.txt  graph_7.dot  graph_7.txt  graph_8.dot  graph_8.txt  graph_9.dot  graph_9.txt  index.html  log.txt  out.txt  parameters.txt  results.txt
